:lipstick: Fix images being stretched in elements' tooltip

--- a/src/molkobain-datacenter-view/common/css/datacenter-view.scss
+++ b/src/molkobain-datacenter-view/common/css/datacenter-view.scss
@@ -507,14 +507,15 @@
 						margin-right: 6px;
 					}
 				}
-				.mdv-dtl-value{
-				}
 
 				&:last-of-type{
 					margin-bottom: 0;
 				}
 			}
 		}
+	}
+	img {
+		height: auto !important /* Overload inline style put by the HTML editor, otherwise images will be stretched */
 	}
 
 	&:last-of-type{
